# AIDictionary

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  repository.rs
src/components/: AIDraftPanel.tsx  AlphabetTabs.tsx  AtlasBook.tsx  BlockEditor.tsx  BlockRenderer.tsx  EntryEditor.tsx  EntryPage.tsx  LibraryList.tsx  MapView.tsx  MiniBook.tsx  RightContextPanel.tsx  SettingsView.tsx  Sidebar.tsx  TimelineView.tsx  TopBar.tsx  TrailsView.tsx
src/services/: lexiconRepository.ts
src/services/ai/: aiProvider.ts  aiSettings.ts  ollamaProvider.ts  parsing.ts  prompts.ts  types.ts
src/utils/: blocks.ts  filters.ts
