[package]
name = "lexicon-os"
version = "0.1.0"
description = "A local-first personal knowledge atlas."
authors = ["Lexicon OS"]
edition = "2021"

[lib]
name = "lexicon_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
